# example-api

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
api/: main.py
tests/: test_root.py
